<resources>
    <string name="app_name">Anti Slot</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="UserName">User name</string>
    <string name="Name">Name</string>
    <string name="SignUp">SignUP</string>
    <string name="start">Start</string>
    <string name="End">End</string>
    <string name="set_time">set time</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="welcome">Welcome</string>
</resources>